2020-01-26         Arnold D. Robbins     <arnold@skeeve.com>

	* functab4.awk: Code changes to avoid race conditions
	calling stat on the test directory. Thanks to
	Michal Jaegermann and Andrew J. Schorr.

2020-01-23         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New test, symtab11.
	* symtab11.awk, symtab11.ok: New files.

2020-01-19         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New test, profile13.
	* profile13.awk, profile13.ok: New files.
	* profile5.ok: Updated after code changes.

2020-01-08         Arnold D. Robbins     <arnold@skeeve.com>

	* indirectbuiltin.awk, numrange.awk, numrange.ok: Changes
	after code changes.
	* Makefile.am (EXTRA_DIST): New tests, stupid1 and stupid2.
	* stupid1.awk, stupid1.ok: New files.
	* stupid2.awk, stupid2.ok: New files.
	* Makefile.am (EXTRA_DIST): New tests, stupid3 and stupid4.
	* stupid3.awk, stupid3.ok: New files.
	* stupid4.awk, stupid4.ok: New files.

2019-11-09         Alexey Pawlow        <alexey.pawlow@gmail.com>

	* Makefile.am (mbprintf5): Add check for MSYS.
	(readdir_retest): Ditto.

2019-11-03         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New test, fpat7.
	* fpat7.awk, fpat7.ok, fpat7.in: New files.

2019-10-13         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New tests, typedregex5 and
	typedregex6.
	* typedregex5.awk, typedregex5.ok, typedregex6.in,
	typedregex5.in, typedregex6.awk, typedregex6.ok: New files.

2019-09-24         Jürgen Kahrs Google   <juergen.kahrs@googlemail.com>

	* Makefile.am (EXTRA_DIST): New test, mpfranswer42.
	* mpfranswer42.awk, mpfranswer42.ok: New files.

2019-07-23         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): Fix typos in filenames.

2019-06-28         Michal Jaegermann     <michal.jnn@gmail.com>

	Add backwards compatibility tests for inplace.

	* Makefile.am (EXTRA_DIST): New tests, inplace2bcomp, inplace2bcomp.