@@ -3,6 +3,8 @@
 	* functab4.awk: Code changes to avoid race conditions
 	calling stat on the test directory. Thanks to
 	Michal Jaegermann and Andrew J. Schorr.
+	* Makefile.am: Fix lack of backslash continuation and
+	regenerate.
 
 2020-01-23         Arnold D. Robbins     <arnold@skeeve.com>
 
